# ServerStatusBot

./: .gitignore  Cargo.toml  docker-compose.yml  rustfmt.toml
src/: config.rs  main.rs
src/adapters/: guild.rs  local_guild.rs  mod.rs  mongo_guild.rs  server_info.rs  steam_server_info.rs
src/controllers/: guild.rs  mod.rs  server_info.rs
src/discord/: cmd_handlers.rs  cmds.rs  event_handler.rs  globals.rs  mod.rs  slash_commands.rs
src/discord/commands/: add_server.rs  list_servers.rs  mod.rs  ping.rs  remove_server_by_address.rs  remove_server_by_alias.rs  set_channel.rs
src/discord/commands/handlers/: add_server.rs  cmd_result.rs  list_servers.rs  mod.rs  ping.rs  remove_server_by_address.rs  set_channel.rs  utils.rs
src/discord/commands/handlers/errors/: command_not_found.rs  invalid_arg.rs  mod.rs
src/entities/: address.rs  bot_settings.rs  errors.rs  guild.rs  guild_bot_settings.rs  guild_id.rs  mod.rs  server_info.rs
src/errors/: guild.rs  mod.rs  server_info.rs
src/proxies/: guild_proxy.rs  mod.rs  mongo_guild_proxy.rs  server_info_proxy.rs  steam_server_info_proxy.rs
src/serde_helpers/: mod.rs
src/tasks/: create_or_update_status_msg.rs  mod.rs
