[package]
name = "a2s-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rstest = "0.12"

[dependencies]
futures = "0.3"
thiserror = "1"
itertools = "0.10"
chrono = "0.4"
dotenv = "0.15"
serde_with = "1.12"
uuid = "0.8"
async-trait = "0.1"
log = "0.4"
env_logger = "0.9"


[dependencies.a2s]
version = "0.5"
default_features = false
features = ["async"]

[dependencies.mongodb]
version = "2"
default_features = false
features = ["tokio-runtime"]

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache", "unstable_discord_api"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.rs-flow]
git = "https://github.com/Jul1aK0wal1k/rs-flow.git"
branch = "main"